--- a/forgotpass.html
+++ b/forgotpass.html
@@ -29,7 +29,7 @@
 	<tr><td colspan="2" align="center"><br><input type="submit" value="Request reset" id="resetbutton"></td></tr></form>
 </table>
 <br>
-<a href="index.html" id="loginlink" "> Go to login </a>
+<a href="login.html" id="loginlink" "> Go to login </a>
 </div>
 </div>
 
