--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 <header>
 	<div id="logocontainer">
 	<img id="logo" src="images/Logo.png" width=100px height=100px>
-	<img id="helpbutton" src="help.png" align="right">
+	<img id="helpbutton" src="images/help.png" align="right">
 	</div>
 </header> 
 
@@ -21,10 +21,12 @@
 	<img src="images/logo.png" width="200" height="200">
 	<h1>Log in</h1>
 	<table border ="0" align="center">
-		<tr><td><form action="AdminLogin.php" method="post"><label>Staff ID </label></td>
-			<td><input type="text" name="staffid"></td></tr>
+		<tr><td><form action="Login.php" method="post"><label>User name</label></td>
+			<td><input type="text" name="username"></td></tr>
 		<tr><td><label>Password</label></td>
-			<td><input type="password" name="password"></td></tr>
+			<td><input type="password" name="password" required placeholder="Enter Password"
+    oninvalid="this.setCustomValidity('You Should Enter a Password')"
+    oninput="setCustomValidity('')"></td></tr>
 		<tr><td colspan="2" align="center"><br><input type="submit" value="Login" id="button">
 			<input type="button" onclick="window.location.href='help.html'" value="Cancel" id="button"></td></tr>
 		<tr><td colspan="2" align="center"><a href="forgotpass.html" id="loginlink"><br>Forgot password </a></td></tr></form>
