--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
 	<img src="images/logo.png" width="200" height="200">
 	<h1>Log in</h1>
 	<table border ="0" align="center">
-		<tr><td><form action="Login.php" method="post"><label>User name</label></td>
+		<tr><td><form action="login.php" method="post"><label>User name</label></td>
 			<td><input type="text" name="username"></td></tr>
 		<tr><td><label>Password</label></td>
 			<td><input type="password" name="password" required placeholder="Enter Password"
