--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!Doctype html>
-<html>
+<html style="  height: 100%;">
 <head>
 <title>Login</title>
 
@@ -11,7 +11,6 @@
 <header>
 	<div id="logocontainer">
 	<img id="logo" src="images/Logo.png" width=100px height=100px>
-	<img id="helpbutton" src="images/help.png" align="right">
 	</div>
 </header> 
 
@@ -21,7 +20,7 @@
 	<img src="images/logo.png" width="200" height="200">
 	<h1>Log in</h1>
 	<table border ="0" align="center">
-		<tr><td><form action="login.php" method="post"><label>User name</label></td>
+		<tr><td><form action="Login.php" method="post"><label>User name</label></td>
 			<td><input type="text" name="username"></td></tr>
 		<tr><td><label>Password</label></td>
 			<td><input type="password" name="password" required placeholder="Enter Password"
